--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "text-encoding": "^0.6.4",
     "url-search-params-polyfill": "^2.0.1",
     "webfontloader": "^1.6.28",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-whitelist": "^1.3.3"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
@@ -105,7 +107,9 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
-    "workbox-webpack-plugin": "^2.0.1"
+    "workbox-webpack-plugin": "^2.0.1",
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-whitelist": "^1.3.3"
   },
   "babel": {
     "presets": [
@@ -143,6 +147,14 @@
     "plugins": [
       "react",
       "jest"
+    ]
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    },
+    "platforms": [
+      "android"
     ]
   },
   "scripts": {
