--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "normalize-path": "^3.0.0",
     "normalize.css": "^8.0.0",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
@@ -61,8 +62,7 @@
     "redux-responsive": "^4.3.7",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3",
-    "whatwg-fetch": "^2.0.4",
-    "normalize-path": "^3.0.0"
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.54",
@@ -152,6 +152,7 @@
     "stylelint-webpack-plugin": "^0.10.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.1",
+    "webpack-babel-env-deps": "^1.4.3",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.3",
