--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,66 +100,69 @@ jobs:
     shell: /bin/bash -eo pipefail
     steps:
       - run:
+          name: ls
+          command: ls -A
+      - run:
           name: Move release notes
           command: build/move-release-notes move --deliverino-private-key ${DELIVERINO_PRIVATE_KEY} --owner ${CIRCLE_PROJECT_USERNAME} --repo ${CIRCLE_PROJECT_REPONAME} --branch ${CIRCLE_BRANCH} --new-version=2020.6.1
-      - run:
-          name: "Show current CPU count"
-          command: |
-            echo "CPU count is ${TOTAL_CPUS}"
-      - add_ssh_keys:
-          fingerprints:
-            - "30:f4:98:9f:1c:72:d1:c0:17:9f:57:05:74:a6:44:50"
-      - checkout
-      - restore_cache:
-          name: Restore Yarn Package Cache
-          keys:
-            - 2-yarn-{{ arch }}-{{ checksum "yarn.lock" }}
-            - 2-yarn-{{ arch }}-
-      - run:
-          name: Install Dependencies
-          command: yarn install --frozen-lockfile
-      - save_cache:
-          name: Save Yarn Package Cache
-          key: 2-yarn-{{ arch }}-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/.cache/yarn
-            - node_modules
-      - run:
-          name: Check linting
-          command: yarn run lint
-      - run:
-          name: Check flow
-          command: yarn run flow:check-now --max-workers $TOTAL_CPUS
-      - run:
-          name: Unit tests
-          command: yarn run test --ci --maxWorkers $TOTAL_CPUS
-      - run:
-          name: Test coverage # Results are not used right now. Run it anyway to (possibly) discover more problems.
-          command: yarn run test:coverage --ci --maxWorkers $TOTAL_CPUS
-      - when: # Debug build for integreat-test-cms
-          condition:
-            equal: [ "integreat-test-cms", << parameters.build_config >> ]
-          steps:
-            - run:
-                name: Debug << parameters.build_config >> build
-                command: yarn run webpack --config build/webpack.config.babel.js --env.config_name=<< parameters.build_config >> --env.production=false
-      - unless: # Production build for integreat and malte
-          condition:
-            equal: [ "integreat-test-cms", << parameters.build_config >> ]
-          steps:
-            - run:
-                name: Production << parameters.build_config >> build
-                command: yarn run webpack --config build/webpack.config.babel.js --env.config_name=<< parameters.build_config >> --env.production=true
-      - run:
-          name: Check build
-          command: yarn run check:built
-      - store_artifacts:
-          path: dist
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - dist
-            - node_modules
+#      - run:
+#          name: "Show current CPU count"
+#          command: |
+#            echo "CPU count is ${TOTAL_CPUS}"
+#      - add_ssh_keys:
+#          fingerprints:
+#            - "30:f4:98:9f:1c:72:d1:c0:17:9f:57:05:74:a6:44:50"
+#      - checkout
+#      - restore_cache:
+#          name: Restore Yarn Package Cache
+#          keys:
+#            - 2-yarn-{{ arch }}-{{ checksum "yarn.lock" }}
+#            - 2-yarn-{{ arch }}-
+#      - run:
+#          name: Install Dependencies
+#          command: yarn install --frozen-lockfile
+#      - save_cache:
+#          name: Save Yarn Package Cache
+#          key: 2-yarn-{{ arch }}-{{ checksum "yarn.lock" }}
+#          paths:
+#            - ~/.cache/yarn
+#            - node_modules
+#      - run:
+#          name: Check linting
+#          command: yarn run lint
+#      - run:
+#          name: Check flow
+#          command: yarn run flow:check-now --max-workers $TOTAL_CPUS
+#      - run:
+#          name: Unit tests
+#          command: yarn run test --ci --maxWorkers $TOTAL_CPUS
+#      - run:
+#          name: Test coverage # Results are not used right now. Run it anyway to (possibly) discover more problems.
+#          command: yarn run test:coverage --ci --maxWorkers $TOTAL_CPUS
+#      - when: # Debug build for integreat-test-cms
+#          condition:
+#            equal: [ "integreat-test-cms", << parameters.build_config >> ]
+#          steps:
+#            - run:
+#                name: Debug << parameters.build_config >> build
+#                command: yarn run webpack --config build/webpack.config.babel.js --env.config_name=<< parameters.build_config >> --env.production=false
+#      - unless: # Production build for integreat and malte
+#          condition:
+#            equal: [ "integreat-test-cms", << parameters.build_config >> ]
+#          steps:
+#            - run:
+#                name: Production << parameters.build_config >> build
+#                command: yarn run webpack --config build/webpack.config.babel.js --env.config_name=<< parameters.build_config >> --env.production=true
+#      - run:
+#          name: Check build
+#          command: yarn run check:built
+#      - store_artifacts:
+#          path: dist
+#      - persist_to_workspace:
+#          root: ./
+#          paths:
+#            - dist
+#            - node_modules
 
   deliver:
     parameters:
