--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,19 +100,19 @@ jobs:
     shell: /bin/bash -eo pipefail
     steps:
       - run:
+          name: "Show current CPU count"
+          command: |
+            echo "CPU count is ${TOTAL_CPUS}"
+      - add_ssh_keys:
+          fingerprints:
+            - "30:f4:98:9f:1c:72:d1:c0:17:9f:57:05:74:a6:44:50"
+      - checkout
+      - run:
           name: ls
           command: ls -A
       - run:
           name: Move release notes
           command: build/move-release-notes move --deliverino-private-key ${DELIVERINO_PRIVATE_KEY} --owner ${CIRCLE_PROJECT_USERNAME} --repo ${CIRCLE_PROJECT_REPONAME} --branch ${CIRCLE_BRANCH} --new-version=2020.6.1
-#      - run:
-#          name: "Show current CPU count"
-#          command: |
-#            echo "CPU count is ${TOTAL_CPUS}"
-#      - add_ssh_keys:
-#          fingerprints:
-#            - "30:f4:98:9f:1c:72:d1:c0:17:9f:57:05:74:a6:44:50"
-#      - checkout
 #      - restore_cache:
 #          name: Restore Yarn Package Cache
 #          keys:
